@@ -1,10 +1,12 @@
 package org.apereo.cas.logout;
 
+import org.apereo.cas.CasProtocolConstants;
+
 import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -15,10 +17,10 @@ import static org.junit.jupiter.api.Assertions.*;
  * @since 6.0.0
  */
 @Tag("Logout")
-public class LogoutHttpMessageTests {
+class LogoutHttpMessageTests {
     @Test
-    public void verifyOperation() throws Exception {
-        val message = new LogoutHttpMessage(new URL("https://github.com"), "LogoutMessage", false);
-        assertTrue(message.getMessage().startsWith(LogoutHttpMessage.LOGOUT_REQUEST_PARAMETER));
+    void verifyOperation() throws Throwable {
+        val message = new LogoutHttpMessage(CasProtocolConstants.PARAMETER_LOGOUT_REQUEST, new URI("https://github.com").toURL(), "LogoutMessage", false);
+        assertTrue(message.getMessage().startsWith(CasProtocolConstants.PARAMETER_LOGOUT_REQUEST));
     }
 }
